--- a/JiaoBaoYun-hb/html/show/show-attended.html
+++ b/JiaoBaoYun-hb/html/show/show-attended.html
@@ -10,7 +10,7 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/show/show-list.css" rel="stylesheet" />
-		<script src="../../js/utils/vue.min.js"></script>
+		
 	</head>
 
 	<body style="background-color:white;">
@@ -19,7 +19,7 @@
 			<div class="mui-scroll">
 				<div v-if="isAttended==0" class="" style="min-height:300px;text-align: center;padding-top: 20%;">
 					<img src="../../image/mine/invite_none_0.png" width="50%" height="auto">
-					<p style="margin: auto 0;padding: 10px;">暂无关注的人~~</p>
+					<p style="margin: auto 0;padding: 10px;">暂无关注的课程~~</p>
 				</div>
 				<!--数据列表-->
 				<template v-else-if="isAttended&&listData.length>0">
@@ -42,7 +42,7 @@
 				</template>
 			</div>
 		</div>
-
+		<script src="../../js/utils/vue.min.js"></script>
 		<script type="text/javascript">
 			var showAtt = new Vue({
 				el: '#show-att',
