--- a/JiaoBaoYun-hb/html/sciedu/sciedu-list.html
+++ b/JiaoBaoYun-hb/html/sciedu/sciedu-list.html
@@ -17,12 +17,15 @@
 				font-size: 12px;
 				color: #B7B7B7;
 			}
-			.readed-color{
-				color:#B7B7B7;
+			
+			.readed-color {
+				color: #B7B7B7;
 			}
-			.readed-background{
-				background-color:#FFFFFF ;
+			
+			.readed-background {
+				background-color: #FFFFFF;
 			}
+			
 			.li-flex {
 				display: flex;
 				display: -webkit-flex;
@@ -116,6 +119,9 @@
 			 * 下拉刷新回调方法
 			 */
 			function pulldownRefresh() {
+				if(scieduList.pageInfo.totalPage) {
+					scieduList.oldPageInfo = scieduList.pageInfo;
+				}
 				scieduList.resetPageInfo();
 				scieduList.requireListData(function() {
 					mui('#sciedu-list').pullRefresh().endPulldown();
@@ -126,6 +132,10 @@
 			 * 上拉加载更多回调方法
 			 */
 			function pullupRefresh() {
+				if(scieduList.pageInfo.totalPage) {
+					scieduList.oldPageInfo = scieduList.pageInfo;
+				}
+				console.log("上拉加载时的pageInfo:", scieduList.pageInfo);
 				if(scieduList.pageInfo.pageIndex > scieduList.pageInfo.totalPage) {
 					mui('#sciedu-list').pullRefresh().disablePullupToRefresh();
 					return;
