微学未关注 背景色

--- a/JiaoBaoYun-hb/html/micro-course/course-attended.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-attended.html
@@ -25,7 +25,7 @@
 
 	<body style="background-color: white;">
 		<!--下拉刷新容器-->
-		<div id="course-att" class="mui-content mui-scroll-wrapper">
+		<div id="course-att" class="mui-content mui-scroll-wrapper" v-bind:class="{'background-white':isAttended==0}">
 			<div class="mui-scroll mui-fullscreen">
 				<div v-if="isAttended==0" class="" style="min-height:300px;text-align: center;padding-top: 20%;">
 					<img src="../../image/mine/invite_none_0.png" width="50%" height="auto">
