设置密码界面，手机验证码登录，跳转问题

--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -304,7 +304,7 @@
 									unickName0.value = '';
 									password0.value = '';
 									password1.value = '';
-									if(tempFlag == 0 || tempFlag == 2) { //2为注册后设置密码
+									if(tempFlag == 0 || tempFlag == 2 || tempFlag == 4) { //2为注册后设置密码
 										var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 										tempInfo.ispw = '1';
 										tempInfo.isLogin = 1;
