更改验证码 设置密码界面android返回上级界面逻辑

--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -86,7 +86,16 @@
 		<script src="../../js/libs/jquery.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
-			mui.init();
+			mui.init({
+				beforeback: function() {
+					document.activeElement.blur();
+					events.logOff();
+					events.infoChanged();
+					mui.fire(plus.webview.getWebviewById("index.html"), 'login');
+					closeRegister();
+					return true;
+				}
+			});
 			mui.plusReady(function() {
 				var tempFlag = 0; //0我普通，1为设置修改密码，2为注册后设置密码，3为退出登录时设置密码
 				//获取当前页面
@@ -328,8 +337,8 @@
 										events.defaultLogin(function(data) {
 											if(data.value) {
 												//退出登录
-//												events.logOff();
-//												events.infoChanged();
+												//												events.logOff();
+												//												events.infoChanged();
 												mui.fire(plus.webview.getWebviewById("index.html"), 'quit');
 												closeRegister(1);
 												mui.back();
@@ -347,14 +356,12 @@
 				//取消按钮
 				events.addTap('cancelBtn', function() {
 					document.activeElement.blur();
-					//console.log('点击取消按钮');
 					events.logOff();
 					events.infoChanged();
 					//					events.openNewWindowWithData('../index/index.html', 'login');
 					mui.fire(plus.webview.getWebviewById("index.html"), 'login');
 					closeRegister();
 					mui.back();
-					//					plus.webview.getLaunchWebview().show('slide-in-right', 250);
 				});
 			});
 			/**
