更改密码界面 android 系统返回键逻辑

--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -86,17 +86,9 @@
 		<script src="../../js/libs/jquery.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
-			mui.init({
-				beforeback: function() {
-					document.activeElement.blur();
-					events.logOff();
-					events.infoChanged();
-					mui.fire(plus.webview.getWebviewById("index.html"), 'login');
-					closeRegister();
-					return true;
-				}
-			});
+			mui.init();
 			mui.plusReady(function() {
+				setListeners();
 				var tempFlag = 0; //0我普通，1为设置修改密码，2为注册后设置密码，3为退出登录时设置密码
 				//获取当前页面
 				//				var curPage = plus.webview.currentWebview();
@@ -364,6 +356,18 @@
 					mui.back();
 				});
 			});
+
+			function setListeners() {
+				if(mui.os.android) {
+					plus.key.addEventListener('backbutton', function() {
+						document.activeElement.blur();
+						events.logOff();
+						events.infoChanged();
+						mui.fire(plus.webview.getWebviewById("index.html"), 'login');
+						closeRegister();
+					});
+				}
+			}
 			/**
 			 * 设置 退出登录类型
 			 * @param {Object} quitType 0 为设置 1为退出时设置
