--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -102,7 +102,67 @@
 				}
 			}
 
+			@-moz-keyframes move-out-left {
+				/*从左边移出屏幕*/
+				from {
+					right: 0%;
+				}
+				to {
+					right: 100%;
+				}
+			}
+
+			@-webkit-keyframes move-out-left {
+				/*从左边移出屏幕*/
+				from {
+					right: 0%;
+				}
+				to {
+					right: 100%;
+				}
+			}
+
+			@-o-keyframes move-out-left {
+				/*从左边移出屏幕*/
+				from {
+					right: 0%;
+				}
+				to {
+					right: 100%;
+				}
+			}
+
 			@keyframes move-out-right {
+				/*从右边移出屏幕*/
+				from {
+					left: 0%;
+				}
+				to {
+					left: 100%;
+				}
+			}
+
+			@-moz-keyframes move-out-right {
+				/*从右边移出屏幕*/
+				from {
+					left: 0%;
+				}
+				to {
+					left: 100%;
+				}
+			}
+
+			@-webkit-keyframes move-out-right {
+				/*从右边移出屏幕*/
+				from {
+					left: 0%;
+				}
+				to {
+					left: 100%;
+				}
+			}
+
+			@-o-keyframes move-out-right {
 				/*从右边移出屏幕*/
 				from {
 					left: 0%;
@@ -122,7 +182,67 @@
 				}
 			}
 
+			@-moz-keyframes move-in-left {
+				/*从左边移进屏幕*/
+				from {
+					right: 100%;
+				}
+				to {
+					right: 0%;
+				}
+			}
+
+			@-webkit-keyframes move-in-left {
+				/*从左边移进屏幕*/
+				from {
+					right: 100%;
+				}
+				to {
+					right: 0%;
+				}
+			}
+
+			@-o-keyframes move-in-left {
+				/*从左边移进屏幕*/
+				from {
+					right: 100%;
+				}
+				to {
+					right: 0%;
+				}
+			}
+
 			@keyframes move-in-right {
+				/*从右边移进屏幕*/
+				from {
+					left: 100%;
+				}
+				to {
+					left: 0%;
+				}
+			}
+
+			@-moz-keyframes move-in-right {
+				/*从右边移进屏幕*/
+				from {
+					left: 100%;
+				}
+				to {
+					left: 0%;
+				}
+			}
+
+			@-webkit-keyframes move-in-right {
+				/*从右边移进屏幕*/
+				from {
+					left: 100%;
+				}
+				to {
+					left: 0%;
+				}
+			}
+
+			@-o-keyframes move-in-right {
 				/*从右边移进屏幕*/
 				from {
 					left: 100%;
