--- a/JiaoBaoYun-hb/html/homework/homework-tea.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea.html
@@ -131,7 +131,7 @@
 
 			<!--下拉刷新容器-->
 			<!--<div id="refreshContainer" class="mui-scroll-wrapper">-->
-			<div class="mui-scroll-wrapper mui-fullscreen">
+			<div id="work-list" class="mui-scroll-wrapper mui-fullscreen">
 				<div class="mui-scroll vertical-scroll">
 					<ul id="list-container" class="mui-table-view">
 					</ul>
