教宝云-苹果] 班级空间视频播放时显示小窗口播放不好看

--- a/JiaoBaoYun-hb/html/micro-course/course-all.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-all.html
@@ -37,7 +37,7 @@
 					<div class="" style="min-height:300px;text-align: center;" v-bind:class="[isRequired?'padding-top20':'padding-top0']">
 						<img v-if="isRequired" src="../../image/mine/invite_none_0.png" width="50%" height="auto">
 						<p style="margin: auto 0;padding: 10px;">
-							<span v-if="!isRequired" class="mui-spinner" style="vertical-align: center;height: 15px;width: 15px;margin-bottom: -4px;"></span> {{isRequired?'没有获取到展现内容~~':'数据加载中~~'}}
+							<span v-if="!isRequired" class="mui-spinner" style="vertical-align: center;height: 15px;width: 15px;margin-bottom: -4px;"></span> {{isRequired?'没有微课内容~~':'数据加载中~~'}}
 						</p>
 					</div>
 				</template>
