同上，为展现界面

--- a/JiaoBaoYun-hb/html/show/show-detail.html
+++ b/JiaoBaoYun-hb/html/show/show-detail.html
@@ -76,7 +76,7 @@
 			</div>
 		</div>
 		<div id="videoPopover" class="mui-popover" style="top: 0px;">
-			<video id="video" style="position: absolute;z-index: 999;" controls="controls" webkit-playsinline playsinline>
+			<video id="video" style="position: absolute;z-index: 999;" controls="controls">
 				您的浏览器不支持 video 标签。
 			</video>
 		</div>
