调整科教详情样式

--- a/JiaoBaoYun-hb/html/sciedu/sciedu_show_main.html
+++ b/JiaoBaoYun-hb/html/sciedu/sciedu_show_main.html
@@ -20,18 +20,20 @@
 			}
 
 			#news_title {
-				font-size: 18px;
+				font-size: 20px;
 				color: #323232;
+				font-weight: 200;
 				text-align: center;
-				line-height: 48px;
-				margin: 24px 10px;
+				line-height: 34px;
+				padding: 10px 10px 0 10px;
+				letter-spacing: 1px;
 			}
 
 			#news_tips {
 				font-size: 15px;
-				color: #323232;
+				color: #B7B7B7;
 				text-align: center;
-				margin: 12px 10px;
+				margin: 10px 10px;
 			}
 
 			#news_content {
@@ -39,9 +41,11 @@
 			}
 
 			#news_content p {
-				color: #474747;
+				color: #3E3E3E;
 				font-size: 15px;
-				line-height: 44px;
+				letter-spacing: 1px;
+				line-height: 26px;
+				word-spacing: 28px;
 			}
 
 			img {
