--- a/JiaoBaoYun-hb/html/sciedu/sciedu_show_main.html
+++ b/JiaoBaoYun-hb/html/sciedu/sciedu_show_main.html
@@ -16,7 +16,6 @@
 			body,
 			.mui-content {
 				background-color: white;
-				word-break: break-all;
 			}
 
 			#news_title {
@@ -27,6 +26,7 @@
 				line-height: 34px;
 				padding: 10px 10px 0 10px;
 				letter-spacing: 1px;
+				word-break: break-all;
 			}
 
 			#news_tips {
@@ -34,6 +34,7 @@
 				color: #B7B7B7;
 				text-align: center;
 				margin: 10px 10px;
+				word-break: break-all;
 			}
 
 			#news_content {
@@ -48,7 +49,7 @@
 				word-spacing: 28px;
 			}
 
-			img {
+			#news_content p img {
 				width: 100%;
 				height: initial;
 			}
@@ -76,7 +77,6 @@
 					doubletap: true, //默认为false
 				},
 				beforeback: function() {
-					console.log("beforeback");
 					document.getElementById("news_title").innerText = "";
 					document.getElementById("news_tips").innerText = "";
 					document.getElementById("news_content").innerHTML = "";
